=== CHANGES: ameritrade ===


2018-08-20

  - Added ameritrade.scripts and default function add_script_args() and
    open_with_args() in order to make it easy to write lots of example scripts.


2018-08-14

  - Initial release.